c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/extra_credit/bad_union_member_access/union_bad_member.c
union s {
    int x;
    int y;
};

union t {
    int blah;
    int y;
};

int main(void) {
    union s foo = {1};
    return foo.blah; // "union s" has no member "blah"
}